Fix flickering

--- a/_sass/_donate.scss
+++ b/_sass/_donate.scss
@@ -18,6 +18,10 @@
         font-size: 1.2em;
     }
 
+    a {
+        color: $grayColor;
+    }
+
     .btn {
         font-weight: 700;
         font-size: 1.2em;
